# atm-management-software

./: .gitignore  CMakeLists.txt  README.md
include/: ATM.h  ATMGui.h  Database.h
sql/: setup.sql
src/: ATM.cpp  ATMGui.cpp  Database.cpp  main.cpp
